# termpop

./: CLAUDE.md  Cargo.toml  DISTRIBUTION.md  README.md  plan-undo-redo.md  plan.md  tasks.md
.github/: release_body.md
.github/workflows/: ci.yml  release.yml
assets/icon/: termpop.icns
docs/: feature-cursor-positioning.md  troubleshooting-paste.md
packaging/: Info.plist  Install.command  설치 가이드.txt
scripts/: package-dmg.sh
src/: ax_position.rs  cli.rs  clipboard.rs  config.rs  daemon.rs  editor.rs  ipc.rs  launchd.rs  main.rs
