[package]
name = "termpop"
version = "0.1.0"
edition = "2021"

[dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSObject", "NSThread", "NSObjCRuntime", "NSDate"] }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSWindow",
    "NSView",
    "NSTextView",
    "NSText",
    "NSScrollView",
    "NSButton",
    "NSControl",
    "NSFont",
    "NSFontDescriptor",
    "NSColor",
    "NSScreen",
    "NSResponder",
    "NSRunningApplication",
    "NSGraphics",
    "NSEvent",
    "NSPasteboard",
    "NSWorkspace",
] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "io-util", "macros", "sync"] }
dirs = "6"
toml = "0.8"
global-hotkey = "0.7"
core-graphics = "0.24"

[dev-dependencies]
tempfile = "3"
