[package]
name = "termpop"
version = "0.2.0"
edition = "2021"

[dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSObject", "NSThread", "NSObjCRuntime", "NSDate", "NSAttributedString", "NSDictionary", "NSRange", "NSUndoManager"] }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSWindow",
    "NSView",
    "NSTextView",
    "NSText",
    "NSTextField",
    "NSScrollView",
    "NSButton",
    "NSControl",
    "NSFont",
    "NSFontDescriptor",
    "NSColor",
    "NSScreen",
    "NSResponder",
    "NSRunningApplication",
    "NSGraphics",
    "NSEvent",
    "NSPasteboard",
    "NSWorkspace",
] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "io-util", "macros", "sync"] }
dirs = "6"
toml = "0.8"
objc2-quartz-core = { version = "0.3", features = ["CALayer"] }
global-hotkey = "0.7"
core-foundation = "0.10"
core-graphics = "0.24"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
